@@ -1,5 +1,5 @@
 # Hello, emacs: this is a -*- Makefile -*-
-# $Id: Makefile,v 1.26 2012/06/30 09:37:08 markisch Exp $
+# $Id: Makefile,v 1.27 2012/07/07 12:38:41 markisch Exp $
 #
 # GNUPLOT Makefile for MinGW/MSYS on Windows
 # This assumes usual installation of the MinGW32 toolkit, the free
@@ -262,7 +262,7 @@ T=$(TOP)/term/
 D=$(TOP)/docs/
 M=$(TOP)/demo/
 
-VPATH = $(S)
+VPATH = $(S):$(W):$(W):$(S)/wxterminal
 
 TERMFLAGS = -DGNUPLOT_PS_DIR=\"$(GNUPLOT_PS_DIR)\" -DGNUPLOT_JS_DIR=\"$(GNUPLOT_JS_DIR)\"
 TERMFLAGS += -I$(TOP)/term
@@ -432,24 +432,10 @@ OBJS = $(COREOBJS) version.$(O) gpexecute.$(O) $(WX_OBJS) $(CAIRO_OBJS)
 WINOBJS = winmain.$(O) wgnuplib.$(O) wgraph.$(O) wprinter.$(O) wtext.$(O) \
 	  wpause.$(O) wmenu.$(O) screenbuf.$(O) wgdiplus.$(O)
 
-WINDOWS = makefile.nt README.win $(W)/wcommon.h \
-	$(W)/wgnuplib.c $(W)/wgnuplib.h $(W)/wgnuplib.rc \
-	$(W)/wgnuplot.hpj $(W)/wgnuplot.mnu $(W)/wgraph.c \
-	$(W)/winmain.c $(W)/wmenu.c $(W)/wpause.c $(W)/wprinter.c \
-	$(W)/wresourc.h $(W)/wtext.c $(W)/wtext.h \
-	$(W)/screenbuf.c $(W)/screenbuf.h $(W)/wgdiplus.cpp $(W)/wgdiplus.h \
-	$(D)doc2rtf.c $(T)win.trm $(W)/grpicon.ico $(W)/texticon.ico
-
-ifdef HTML_HELP
-WINDOWS +=	$(D)windows/doc2html.c
-else
-WINDOWS +=	$(D)doc2rtf.c
-endif
-
 # default rules
 .SUFFIXES: .exe .$(O) .c
 .c.$(O):
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
+	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -MMD -MT '$*.$$(O)' -MF $*.d -o $@ $<
 
 LDLIBS = -lkernel32 -lgdi32 -lwinspool -lcomdlg32 -lcomctl32 -ladvapi32 -lshell32 -lmsimg32 -lgdiplus
 
@@ -465,17 +451,23 @@ $(TARGET): $(OBJS) $(WINOBJS) wgplt_res.$(O)
 $(PGNUPLOT): $(W)/pgnuplot.c version.$(O)
 	$(CC) -O2 -DHAVE_STDBOOL_H -s -o $@ $^ -I$(W) -I$(S) -luser32
 
-# rules
+# pull in dependency info for existing object files
+ifndef NODEPS
+-include $(OBJS:.$(O)=.d)
+-include $(WINOBJS:.$(O)=.d)
+endif
 
-wgplt_res.$(O) :  $(W)/wgnuplot.rc $(W)/wgnuplib.rc $(W)/wresourc.h $(W)/texticon.ico $(W)/grpicon.ico
+# explicit rules
+
+wgplt_res.$(O): $(W)/wgnuplot.rc $(W)/wgnuplib.rc $(W)/wresourc.h $(W)/texticon.ico $(W)/grpicon.ico
 	$(RC) $(RCFLAGS) $< $(RCOUT)
 	$(RES2COFF)
 
 show.$(O): show.c plot.h setshow.h
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -DHELPFILE=\"$(HELPFILE)\" -DBINDIR=\"$(bindir)\" -DGNUPLOT_PS_DIR=\"$(GNUPLOT_PS_DIR)\" -o $@ $<
+	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -DHELPFILE=\"$(HELPFILE)\" -DBINDIR=\"$(bindir)\" -DGNUPLOT_PS_DIR=\"$(GNUPLOT_PS_DIR)\" -MMD -MT '$*.$$(O)' -MF $*.d -o $@ $<
 
 term.$(O): term.c term.h plot.h setshow.h bitmap.h $(CORETERM)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) $(TERMFLAGS) -o $@ $<
+	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) $(TERMFLAGS) -MMD -MT '$*.$$(O)' -MF $*.d -o $@ $<
 
 version.$(O): $(S)/version.c
 
@@ -487,43 +479,19 @@ endif
 WINDEPS = $(W)/wgnuplib.h $(W)/wcommon.h $(W)/wresourc.h $(W)/screenbuf.h $(W)/wgdiplus.h
 
 winmain.$(O): $(W)/winmain.c $(W)/wgnuplib.h $(W)/wtext.h plot.h
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ -DHELPFILE=\"$(HELPFILE)\" $<
-
-wgnuplib.$(O): $(W)/wgnuplib.c $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
-
-wmenu.$(O): $(W)/wmenu.c $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
-
-wtext.$(O): $(W)/wtext.c $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
-
-screenbuf.$(O): $(W)/screenbuf.c $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
-
-wpause.$(O): $(W)/wpause.c $(S)/wxterminal/wxt_term.h $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
-
-wprinter.$(O): $(W)/wprinter.c $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
-
-wgraph.$(O): $(W)/wgraph.c $(WINDEPS)
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
+	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -MMD -MT '$*.$$(O)' -MF $*.d -o $@ -DHELPFILE=\"$(HELPFILE)\" $<
 
 wgdiplus.$(O): $(W)/wgdiplus.cpp $(WINDEPS)
-	$(CXX) -c $(CXXFLAGS) $(CFLAGSEXTRA) -o $@ $<
+	$(CXX) -c $(CXXFLAGS) $(CFLAGSEXTRA) -MMD -MT '$*.$$(O)' -MF $*.d -o $@ $<
 
 wgnuplot.mnu: $(W)/wgnuplot.mnu
 	$(CP) $^ $@
 
 wxt_gui.$(O): $(S)/wxterminal/wxt_gui.cpp $(S)/wxterminal/wxt_gui.h
-	$(CXX) -c $(CFLAGS) $(CFLAGSEXTRA) $(CXXFLAGS) $(CAIRO_CFLAGS) -o $@ $<
+	$(CXX) -c $(CFLAGS) $(CFLAGSEXTRA) $(CXXFLAGS) $(CAIRO_CFLAGS) -MMD -MT '$*.$$(O)' -MF $*.d -o $@ $<
 
 gp_cairo.$(O): $(S)/wxterminal/gp_cairo.c $(S)/wxterminal/gp_cairo.h
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) $(CXXFLAGS) $(PANGOCAIRO_CFLAGS) -o $@ $<
-
-gp_cairo_helpers.$(O): $(S)/wxterminal/gp_cairo_helpers.c $(S)/wxterminal/gp_cairo_helpers.h
-	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) -o $@ $<
+	$(CC) -c $(CFLAGS) $(CFLAGSEXTRA) $(CXXFLAGS) $(PANGOCAIRO_CFLAGS) -MMD -MT '$*.$$(O)' -MF $*.d -o $@ $<
 
 ifdef HTML_HELP
 # convert gnuplot.doc to windows/wgnuplot.html
@@ -724,7 +692,7 @@ ps_guide.pdf: $(D)psdoc/ps_guide.ps
 # clean up temporary files
 clean:
 	$(RM) config.h wgnuplot.map wgnuplot.res $(W)/gnuplot.rtf
-	$(RM) *.$(O) *.po *.o *.co
+	$(RM) *.$(O) *.po *.o *.co *.d
 	$(RM) doc2*.exe $(W)/wgnuplib.res wgnuplib.map wgnuplot.lib
 	$(RM) $(M)bf_test.exe allterm.h allterm.c
 	$(RM) *.aux *.log *.dvi *.toc
@@ -828,8 +796,16 @@ installer:
 	cp -p $(W)/grpicon.ico ./dist/bin/
 	cp -p $(TOP)/win/*.iss ./dist
 	(cd ./dist; $(ISCC) gnuplot.iss)
-	mv ./dist/gp*-setup.exe .
+ifdef RELEASE
+	mv ./dist/gp*-setup.exe gp470-win32-setup.exe
+else
+	mv ./dist/gp*-setup.exe gp470-`date +%Y%m%d`-win32-mingw.exe
+endif
 
 zip:
 	$(MAKE) DESTDIR=./gnuplot install
-	zip -mro9 gp470-win32.zip gnuplot
+ifdef RELEASE
+	zip -mro9 gp470-win32-mingw.zip gnuplot
+else
+	zip -mro9 gp470-`date +%Y%m%d`-win32-mingw.zip gnuplot
+endif
